Don't show the incompatible-with-VPN badge on IE7, since it doesn't layout correctly

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -16467,7 +16467,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
@@ -16509,7 +16509,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
@@ -16600,7 +16600,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
@@ -16660,7 +16660,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
