--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -294,7 +294,7 @@
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
@@ -336,7 +336,7 @@
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
@@ -427,7 +427,7 @@
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
@@ -487,7 +487,7 @@
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg">
+                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
                     <i class="icon-ban-circle"></i>
                     <span data-i18n="settings#vpn-incompatible-label">VPN</span>
                   </span>
