Upstream proxy isn't actually incompatible with VPN -- it's used for tunneled handshake

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -16660,15 +16660,11 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                   </span>
                   <i class="accordion-expand-icon icon-collapse ie7Remove"
                      data-icon-closed="icon-collapse" data-icon-opened="icon-collapse-top"></i>
-                  <span class="label label-warning vpn-incompatible-msg ie7Remove">
-                    <i class="icon-ban-circle"></i>
-                    <span data-i18n="settings#vpn-incompatible-label">VPN</span>
-                  </span>
                 </a>
               </div>
               <div id="settings-accordion-upstream-proxy" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  <form class="form-horizontal vpn-incompatible">
+                  <form class="form-horizontal">
                     <fieldset>
                       <p data-i18n="[html]settings#upstream-proxy#by-default">
                         If your computer already has a proxy configured, by default Psiphon will
@@ -16711,11 +16707,6 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                         <span data-i18n="settings#upstream-proxy#set-both-error-msg">
                           You must set both Hostname and Port, or leave both blank for automatic selection.
                         </span>
-                      </span>
-                      <span class="help-block">
-                        <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
-                          (Doesn't work with VPN mode.)
-                        </small>
                       </span>
                     </fieldset>
                   </form>
