Added some debug controls

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -14819,8 +14819,11 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
 
 var $window = $(window);
 
-// Fired when the UI language changes
+// Fired on the window when the UI language changes
 var LANGUAGE_CHANGE_EVENT = 'language-change';
+
+// Fired on the window when the connected state changes
+var CONNECTED_STATE_CHANGE_EVENT = 'connected-state-change';
 
 // We often test in-browser and need to behave a bit differently
 var IS_BROWSER = true;
@@ -14923,21 +14926,6 @@ var g_lastState = 'stopped';
 var g_connectingTooLongTimeout = null;
 
 $(function() {
-  $('#start').click(function(e) {
-    e.preventDefault();
-    if ($(this).hasClass('disabled')) {
-      return;
-    }
-    HtmlCtrlInterface_Start();
-  });
-  $('#stop').click(function(e) {
-    e.preventDefault();
-    if ($(this).hasClass('disabled')) {
-      return;
-    }
-    HtmlCtrlInterface_Stop();
-  });
-
   connectToggleSetup();
   egressRegionComboSetup();
 
@@ -14979,7 +14967,7 @@ function connectToggleSetup() {
     corners: 1, // Corner roundness (0..1)
     rotate: 50, // The rotation offset
     direction: 1, // 1: clockwise, -1: counterclockwise
-    color: ['#000', '#888', '#FFF'], // #rgb or #rrggbb or array of colors
+    color: ['#000', '#888', '#FFF'], // #rgb or #rrggbb or array of colors // TODO: Pick better colours
     speed: 0.8, // Rounds per second
     trail: 100, // Afterglow percentage
     shadow: false, // Whether to render a shadow
@@ -15005,6 +14993,9 @@ function connectToggleSetup() {
   updateConnectToggle();
 
   $('.slabtext-container').slabText({noResizeEvent: true});
+
+  // Update the button when the back-end tells us the state has changed.
+  $window.on(CONNECTED_STATE_CHANGE_EVENT, updateConnectToggle);
 }
 
 // Update the main connect button, as well as the connection indicator on the tab.
@@ -16073,7 +16064,6 @@ function browserCheck(version) {
 // We don't have the ability to use real cookies or DOM storage, so we'll store
 // persistent stuff in the registry via the win32 code.
 //
-
 var g_cookies = g_initObj.Cookies ? JSON.parse(g_initObj.Cookies) : {};
 
 function getCookie(name) {
@@ -16086,6 +16076,94 @@ function setCookie(name, value) {
 }
 
 
+/* DEBUGGING *****************************************************************/
+
+// Some functionality to help us debug (and demo) in browser.
+
+$(function() {
+  if (!g_initObj.Config.Debug) {
+    $('#debug-tab, #debug-pane').remove();
+    return;
+  }
+
+  // Make the connect button "work"
+  $('#connect-toggle a').click(function(e) {
+    e.preventDefault();
+    var buttonConnectState = $(this).parents('.connect-toggle-content').data('connect-state');
+    if (buttonConnectState === 'stopped') {
+      console.log('DEBUG: connection starting');
+      HtmlCtrlInterface_SetState({state: 'starting'});
+      setTimeout(function() {
+        HtmlCtrlInterface_SetState({state: 'connected'});
+      }, 5000);
+    }
+    else if (buttonConnectState === 'starting' || buttonConnectState === 'connected') {
+      console.log('DEBUG: connection stopping');
+      HtmlCtrlInterface_SetState({state: 'stopping'});
+      setTimeout(function() {
+        HtmlCtrlInterface_SetState({state: 'stopped'});
+      }, 5000);
+    }
+    // the stopping button is disabled
+  });
+
+  // Keep state combo up-to-date
+  function updateStateCombo() {
+    $('#debug-state').val(g_lastState);    
+  }
+  $window.on(CONNECTED_STATE_CHANGE_EVENT, updateStateCombo);
+  updateStateCombo();
+  // Change state when combo changes
+  $('#debug-state').on('change', function() {
+    HtmlCtrlInterface_SetState({state: $('#debug-state').val()});
+  });
+
+  // Wire up add-message
+  $('#debug-message a').on('click', function() {
+    HtmlCtrlInterface_AddMessage({
+      message: $('#debug-message input').val(),
+      priority: parseInt($('#debug-message select').val())
+    });    
+  });
+
+  // Wire up the UpstreamProxyError notice
+  $('#debug-UpstreamProxyError a').on('click', function() {
+    HtmlCtrlInterface_AddNotice({
+      noticeType: 'UpstreamProxyError',
+      data: { message: $('#debug-UpstreamProxyError input').val() }
+    });        
+  });
+
+  // Wire up the HttpProxyPortInUse notice
+  $('#debug-HttpProxyPortInUse a').on('click', function() {
+    HtmlCtrlInterface_AddNotice({
+      noticeType: 'HttpProxyPortInUse'
+    });        
+  });
+
+  // Wire up the SocksProxyPortInUse notice
+  $('#debug-SocksProxyPortInUse a').on('click', function() {
+    HtmlCtrlInterface_AddNotice({
+      noticeType: 'SocksProxyPortInUse'
+    });        
+  });
+
+  // Wire up the AvailableEgressRegions notice
+  $('#debug-AvailableEgressRegions a').on('click', function() {
+    var regions = [], regionCheckboxes = $('#debug-AvailableEgressRegions input');
+    for (var i = 0; i < regionCheckboxes.length; i++) {
+      if (regionCheckboxes.eq(i).prop('checked')) {
+        regions.push(regionCheckboxes.eq(i).val());
+      }
+    }
+    HtmlCtrlInterface_AddNotice({
+      noticeType: 'AvailableEgressRegions',
+      data: { regions: regions }
+    });
+  });
+});
+
+
 /* INTERFACE METHODS *********************************************************/
 
 var PSIPHON_LINK_PREFIX = 'psi:';
@@ -16095,14 +16173,17 @@ var PSIPHON_LINK_PREFIX = 'psi:';
 // Add new status message.
 function HtmlCtrlInterface_AddMessage(jsonArgs) {
   setTimeout(function() {
-    addLogMessage(JSON.parse(jsonArgs));
+    // Allow object as input to assist with debugging
+    var args = (typeof(jsonArgs) === 'object') ? jsonArgs : JSON.parse(jsonArgs);
+    addLogMessage(args);
   }, 1);
 }
 
 // Add new notice. This may be interpreted and acted upon.
 function HtmlCtrlInterface_AddNotice(jsonArgs) {
   setTimeout(function() {
-    var args = JSON.parse(jsonArgs);
+    // Allow object as input to assist with debugging
+    var args = (typeof(jsonArgs) === 'object') ? jsonArgs : JSON.parse(jsonArgs);
     if (args.noticeType === 'UpstreamProxyError') {
       upstreamProxyErrorNotice(args.data.message);
     }
@@ -16122,9 +16203,10 @@ function HtmlCtrlInterface_AddNotice(jsonArgs) {
 // Set the connected state.
 function HtmlCtrlInterface_SetState(jsonArgs) {
   setTimeout(function() {
-    var args = JSON.parse(jsonArgs);
+    // Allow object as input to assist with debugging
+    var args = (typeof(jsonArgs) === 'object') ? jsonArgs : JSON.parse(jsonArgs);
     g_lastState = args.state;
-    updateConnectToggle();
+    $window.trigger(CONNECTED_STATE_CHANGE_EVENT);
   }, 1);
 }
 
@@ -16345,6 +16427,13 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
               زبان<br>
               语言
             </div>
+          </a>
+        </li>
+
+        <li id="debug-tab">
+          <a href="#debug-pane" data-toggle="tab" data-match-width=".main-nav a">
+            <i class="icon-fixed-width icon-bug"></i>
+            <span>Debug</span>
           </a>
         </li>
 
@@ -16932,6 +17021,90 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
             </li>
           </script>
         </div><!-- /language-pane -->
+
+
+        <!-- DEBUG =========================================================-->
+        <div class="tab-pane fade" id="debug-pane">
+          <form class="form-inline">
+            <label>Change connection state</label>
+            <select id="debug-state">
+              <option value="starting">starting</option>
+              <option value="connected">connected</option>
+              <option value="stopping">stopping</option>
+              <option value="stopped">stopped</option>
+            </select>
+          </form>
+
+          <hr>
+
+          <form class="form-inline" id="debug-message">
+            <label>Add message</label>
+            <select style="width:7em">
+              <option value="1" selected>normal</option>
+              <option value="0">debug</option>
+            </select>
+            <input type="text">
+            <a class="btn btn-primary"><i class="icon-plus"></i></a>
+          </form>
+
+          <hr>
+
+          <form class="form-inline" id="debug-UpstreamProxyError">
+            <label>Notice:UpstreamProxyError</label>
+            <input type="text" placeholder="optional message">
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
+          <form class="form-inline" id="debug-HttpProxyPortInUse">
+            <label>Notice:HttpProxyPortInUse</label>
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
+          <form class="form-inline" id="debug-SocksProxyPortInUse">
+            <label>Notice:SocksProxyPortInUse</label>
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
+          <form class="form-inline" id="debug-AvailableEgressRegions">
+            <label>Notice:AvailableEgressRegions</label>
+
+            <div class="controls checkbox inline">
+              <input type="checkbox" id="debug-AvailableEgressRegions-US" value="US">
+              <label class="checkbox inline" for="debug-AvailableEgressRegions-US">US</label>
+            </div>
+            <div class="controls checkbox inline">
+              <input type="checkbox" id="debug-AvailableEgressRegions-GB" value="GB">
+              <label class="checkbox inline" for="debug-AvailableEgressRegions-GB">UK</label>
+            </div>
+            <div class="controls checkbox inline">
+              <input type="checkbox" id="debug-AvailableEgressRegions-JP" value="JP">
+              <label class="checkbox inline" for="debug-AvailableEgressRegions-JP">JP</label>
+            </div>
+            <div class="controls checkbox inline">
+              <input type="checkbox" id="debug-AvailableEgressRegions-SG" value="SG">
+              <label class="checkbox inline" for="debug-AvailableEgressRegions-SG">SG</label>
+            </div>
+            <div class="controls checkbox inline">
+              <input type="checkbox" id="debug-AvailableEgressRegions-NL" value="NL">
+              <label class="checkbox inline" for="debug-AvailableEgressRegions-NL">NL</label>
+            </div>
+            <div class="controls checkbox inline">
+              <input type="checkbox" id="debug-AvailableEgressRegions-DE" value="DE">
+              <label class="checkbox inline" for="debug-AvailableEgressRegions-DE">DE</label>
+            </div>
+            <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
+          </form>
+
+          <hr>
+
+        </div><!-- /about-pane -->
+
 
       </div><!-- /tab-content -->
     </div><!-- /tabbable -->
