Egress region combo on connect tab is now hidden when VPN mode is enabled

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -15569,11 +15569,12 @@ function upstreamProxyValid(finalCheck) {
 // depending on the choice of VPN mode.
 function vpnModeUpdate() {
   var vpn = $('#VPN').prop('checked');
-  $('input.vpn-incompatible:not(.perma-disabled), .vpn-incompatible:not(.perma-disabled) input, '+
-    'select.vpn-incompatible:not(.perma-disabled), .vpn-incompatible:not(.perma-disabled) select')
+  $('input.vpn-incompatible, .vpn-incompatible input, '+
+    'select.vpn-incompatible, .vpn-incompatible select')
       .prop('disabled', vpn).toggleClass('disabled', vpn);
   $('.vpn-incompatible-msg').toggleClass('hidden', !vpn);
   $('.vpn-incompatible').toggleClass('disabled-text', vpn);
+  $('.vpn-incompatible-hide').toggleClass('hidden', vpn);
 
   // The fancy msDropDown controls require more work to disable.
   $('body select').each(function() {
@@ -16545,13 +16546,12 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
 
           </div><!-- /connect-toggle -->
 
-          <div>
-          <div class="egress-region-combo-container">
+          <div class="egress-region-combo-container vpn-incompatible-hide">
             <div class="btn-group dropup" id="EgressRegionCombo">
               <a class="btn btn-large dropdown-toggle f32 ie7Border" data-toggle="dropdown" href="#">
                 <span data-i18n-ltr-classes="pull-left" data-i18n-rtl-classes="pull-right">
-                  <span class="flag us">
-                    Action
+                  <span class="flag">
+                    placeholder
                   </span>
                 </span>
                 <i class="icon-caret-up"
@@ -16561,7 +16561,6 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
                 <!-- filled in dynamically -->
              </ul>
             </div>
-          </div>
           </div>
         </div><!-- /connection-pane -->
 
