--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -255,13 +255,12 @@
 
           </div><!-- /connect-toggle -->
 
-          <div>
-          <div class="egress-region-combo-container">
+          <div class="egress-region-combo-container vpn-incompatible-hide">
             <div class="btn-group dropup" id="EgressRegionCombo">
               <a class="btn btn-large dropdown-toggle f32 ie7Border" data-toggle="dropdown" href="#">
                 <span data-i18n-ltr-classes="pull-left" data-i18n-rtl-classes="pull-right">
-                  <span class="flag us">
-                    Action
+                  <span class="flag">
+                    placeholder
                   </span>
                 </span>
                 <i class="icon-caret-up"
@@ -271,7 +270,6 @@
                 <!-- filled in dynamically -->
              </ul>
             </div>
-          </div>
           </div>
         </div><!-- /connection-pane -->
 
